fix graphql query and dark mode

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,9 +4,6 @@
 
 /* Custom CSS */
 
-body{
-    background-color: #f4f4f4;
-}
 
 .is-screen {
     inline-size: 100vw;
